Added chatbot and login validation for email and password

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -14,7 +14,7 @@
       <nav>
         <a href="#">Acasa</a>
         <a href="#">Despre</a>
-        <a href="#">Evenimente</a>
+        <a href="chatbot.html">Chatbot</a>
         <a href="#">Resurse</a>
         <a href="login.html" class="btn small">Login</a>
       </nav>
