--- a/HTML/login.html
+++ b/HTML/login.html
@@ -18,13 +18,16 @@
 
     <div class="login-form">
       <h2>Login</h2>
-      <input type="email" placeholder="Email">
-      <input type="password" placeholder="Parola">
-      <button type="submit">Login</button>
+      <form id="login-form">
+        <input type="email" id="email" placeholder="Email">
+        <input type="password"  id= "password" placeholder="Parola">
+        <button type="submit">Login</button>
+      </form>
       <p class="register-text">
         Nu ai cont? <a href="register.html">Înregistrează-te</a>
       </p>
     </div>
   </div>
+   <script src="../JS/login.js"></script>
 </body>
 </html>
