Added universities with export csv option and filtering

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,7 +15,7 @@
         <a href="#">Acasa</a>
         <a href="#">Despre</a>
         <a href="chatbot.html">Chatbot</a>
-        <a href="#">Resurse</a>
+        <a href="universities.html">Universitati</a>
         <a href="login.html" class="btn small">Login</a>
       </nav>
     </div>
